app/assets/stylesheets/less/_page.less
/* ... */
.state {
    margin-right:16px;
    margin-top:7px;
    font-weight:bold;
    color:#FFF;
    padding:5px 12px;
    .border-radius(15px);

    &.merged { background-color: @state-merged;}
    &.open { background-color: @state-open; }
    &.closed { background-color : @state-closed;}
    &.rejected { background-color : @state-rejected;}
    &.conflict {background: #C0392B;}
}

.empty-avatar-wrap {
    width:32px;
    height:32px;
}

.mileston-tag {
    max-width: 135px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    color: #2196f3;
    font-size:11px;
    .border-radius(6px);
}

.overdue {
    color:@yobi-red;
}

.pullRequest-branchInfo {
    code {
        border:none;
        background: transparent;
        color: @yobi-cyan-dark;
        padding: 0;

        a {
            color: @yobi-cyan-dark;
            &.branchName { color:@yobi-cyan; }
        }
    }

    i { font-size:12px; margin:0 5px; color: @yobi-cyan-dark; }
}
.pullRequest-stateInfo {
    margin-top:15px;

    .alert {
        padding:15px;
        font-size:13px;
        font-weight:bold;
        .border-radius(3px);

        i {
            margin-top:-2px;
            font-size:15px;
            vertical-align: middle;
        }

        &.alert-success { color:@yobi-green-dark; }
        &.alert-error   { color:@yobi-red-dark;   }
        &.alert-warning { color:@yobi-yello-dark; }
        &.alert-info    { color:@yobi-cyan-dark;  }
    }
}
.codediff-wrap {
    position:relative;

    .diffs-wrap {
        position:relative;
        display:block;
        margin-right:282px;

        .diff-body {
            position:relative;
            .border-radius(3px);
            min-height:30px;
        }


        .write-comment-box { padding:0; margin-top:20px; }
    }

    .review-wrap {
        position:absolute;
        display:block;
        width:260px;
        min-height:30px;
        top:0; right:0;

        .review-container {
            width:260px;
            position:relative;

            &.affix {
                position: fixed;
                top:10px;
            }

            .review-list {
                overflow:auto;
            }
        }
    }

    .btn-hide-reviewcards {
        position:absolute; right:0;
    }
    .btn-show-reviewcards {
        display:none;
    }

    &.diffs-only {
        .diffs-wrap { width:100%; }
        .review-wrap { display:none; }

        .btn-hide-reviewcards {
            display: none;
        }
        .btn-show-reviewcards {
            display:block;
            position:absolute;
            top:0; right:-52px;
            z-index:10;
        }
    }

    .non-ranged-threads-wrap {
        margin-top:20px;

        .btn-thread-minimize { display:none; }
        .comment-thread-wrap {
            border-right:1px solid #ddd;
            border-left:1px solid #ddd;
            .border-radius(0 3px 3px 0);
        }
    }

    .non-ranged-threads-wrap {
        margin-top:20px;

        .btn-thread-minimize { display:none; }
        .comment-thread-wrap {
            border-right:1px solid #ddd;
            border-left:1px solid #ddd;
            .border-radius(3px);
        }
    }
}

.relative-issue {
    display:none;

    dt { color:#797979; }
    ul {
        margin-left:5px;

        .issue-item {
            padding:0;
            border:none;

            .date { font-size:11px; color:#999; }
        }
    }
}

.vote-wrap {
    display:inline-block;
    direction: rtl;
    margin-right: -3px;
    font-size:@base-font-size;
    vertical-align:middle;

    a:hover {
        text-decoration: none;
    }

    .yobicon-hearts:hover {
        color: #f68c52;
    }

    .ybtn  {
        padding:3px 12px !important;
    }

    &.voter-exists {
    }

    .heart {
        display:inline-block;
        color:#ddd;
        font-size: 17px;
        margin-right:2px;
        vertical-align:middle;
        margin-top: 3px;
    }

    .desc {
        display:inline-block;
        margin-right:3px;
        vertical-align:middle;
    }

    .count {
        display:inline-block;
        vertical-align: middle;
    }

    .ybtn-watching {
        .heart {
            color:@yobi-primary;
        }
    }
}
.voter-list-wrap {
    display:inline-block;
    margin-left:.3em;
    margin-right: 5px;
    vertical-align:middle;
    overflow: hidden;
}

#-yona-posting-history{
    .history-made-by{
        font-size: 16px;
        background-color: #eee;
        line-height: 40px;
        padding: 5px;
    }
    .added {
        background-color: #abdd52;
        padding: 5px;
    }
    .deleted {
        background-color: #fda9a6;
        padding: 5px;
    }
    .diff-added {
        background-color: #abdd52;
        padding: 2px 0;
    }
    .diff-deleted {
        background-color: #fda9a6;
        padding: 2px 0;
    }
    .diff-ellipsis {
        color: #bdbdbd;
        font-size: 16px;
        font-family: serif;
    }
}

.voter-list {
    display:block;
    list-style:none;

    li {
        float:left;
        margin-right:3px;
        line-height: 25px;

        margin-top: -4px;
        &:last-of-type {
            margin-right:0;
        }
    }

    .usf-group {
        display:inline-block;
    }
    .avatar-wrap {
        margin-right: 0 !important;
    }
}
.voters-dialog {
    width:340px;
    margin-left:-170px;
    text-align:left;

    .close { margin-top:-2px; }

    li {
        margin-bottom:10px;

        &:last-of-type {
            margin-bottom:0;
        }
    }
}

//---- code browse
.code-browse {
    .bubble-wrap {
        padding: 10px;
        .inner-bubble {
            padding: 20px; /*20px 15px 20px 20px;*/
            margin-bottom: 15px;
            border-bottom:1px solid #cfcfcf;
        }
    }
}

.repo-wrap {
    padding:0;
    background:#fff !important;
    overflow:visible !important;
}
/* ... */

